--- a/views/inventory/detail.ejs
+++ b/views/inventory/detail.ejs
@@ -13,13 +13,11 @@
       <h2><%= vehicle.inv_year %> <%= vehicle.inv_make %> <%= vehicle.inv_model %></h2>
 
      <% if (user) { %>
-        <form method="post"
-              action="<%= isFav
-                        ? ('/account/favorites/remove/' + vehicle.inv_id)
-                        : ('/account/favorites/add/' + vehicle.inv_id) %>">
-          <button class="btn" type="submit">
-            <%= isFav ? 'Remove from Favorites' : 'Add to Favorites' %>
-          </button>
+        <form method="post" action="<%= isFav ? '/account/favorites/remove' : '/account/favorites/add' %>">
+           <input type="hidden" name="inv_id" value="<%= vehicle.inv_id %>">
+           <button class="btn" type="submit">
+              <%= isFav ? 'Remove from Favorites' : 'Add to Favorites' %>
+           </button>
         </form>
       <% } else { %>
         <p class="muted">
